Removed -O3 optimizations from debug builds.

--- a/src/Makefile
+++ b/src/Makefile
@@ -31,9 +31,11 @@ DEBUG_ENABLE?=0
 ifeq ($(DEBUG_ENABLE), 1)
 	DEBUG:=-DDEBUG
 	DEBUG_INFO:=-g
+	OPTIMIZATION:=-O0
 else
 	DEBUG:=
 	DEBUG_INFO:=
+	OPTIMIZATION=-O3
 endif
 
 ifeq ($(ARCH), i386)
@@ -44,7 +46,7 @@ ifeq ($(ARCH), x64)
 	ARCH_BITS=64
 endif
 
-CFLAGS:=-O3 $(DEBUG_INFO) -MMD -MP -I$(INCLUDE_DIR) -I$(INCLUDE_ARCH_DIR) -I$(INCLUDE_PLATFORM_DIR)
+CFLAGS:=$(OPTIMIZATION) $(DEBUG_INFO) -MMD -MP -I$(INCLUDE_DIR) -I$(INCLUDE_ARCH_DIR) -I$(INCLUDE_PLATFORM_DIR)
 CFLAGS+=-ffreestanding -Wall -Wextra -std=gnu11 -DARCH=$(ARCH) -DARCH_BITS=$(ARCH_BITS) -DEARLY_HEAP_SIZE=$(EARLY_HEAP_SIZE) -DBOOTCONSOLE=$(BOOTCONSOLE) $(DEBUG)
 LDFLAGS:=-T $(ARCH_DIR)/$(ARCH).ld -nostdlib
 
