Added default signing of commits to settings.json

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "stdint-gcc.h": "c",
         "stdint.h": "c"
-    }
+    },
+    "git.enableCommitSigning": true
 }
