WIP: physical memory manager now uses correct regions. TODO: reserve x86 known regions.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "stdint-gcc.h": "c",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "bitmap.h": "c"
     },
     "git.enableCommitSigning": true
 }
