PMM: now allocates ull range of available ram. Bitmap: fixed bitmap_test to return 1 or 0.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "stdint-gcc.h": "c",
         "stdint.h": "c",
-        "bitmap.h": "c"
+        "bitmap.h": "c",
+        "bootinfo.h": "c"
     },
     "git.enableCommitSigning": true
 }
