Reworked physical memory manager: now uses multiple bitmaps per region. WIP: Initial kmalloc implementation.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -3,7 +3,8 @@
         "stdint-gcc.h": "c",
         "stdint.h": "c",
         "bitmap.h": "c",
-        "bootinfo.h": "c"
+        "bootinfo.h": "c",
+        "kmalloc.h": "c"
     },
     "git.enableCommitSigning": true
 }
