Some cleanup and added b_zmalloc k_zmalloc functions.

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,7 +26,8 @@ BIN_DIR:=$(PROJECT_DIR)/bin
 
 BOOTCONSOLE?=serial
 
-EARLY_HEAP_SIZE?=4096
+EARLY_HEAP_SIZE?=0x1000
+KERNEL_HEAP_SIZE?=0x4000000
 DEBUG_ENABLE?=0
 
 ifeq ($(DEBUG_ENABLE), 1)
