-Added PIC support. -Added PIT support. -Added initial interrupt support. -Added initial MP support (incomplete) TODO: Add Local and I/O Apic support. TODO: Boot ap CPUs.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -4,7 +4,9 @@
         "stdint.h": "c",
         "bitmap.h": "c",
         "bootinfo.h": "c",
-        "kmalloc.h": "c"
+        "kmalloc.h": "c",
+        "printk.h": "c",
+        "random": "c"
     },
     "git.enableCommitSigning": true
 }
