-added missing definitions to mp .h. -added complete mp table parsing and printing. boot.S: remapped video display memory with caching disabled.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -6,7 +6,10 @@
         "bootinfo.h": "c",
         "kmalloc.h": "c",
         "printk.h": "c",
-        "random": "c"
+        "random": "c",
+        "mp.h": "c",
+        "vm.h": "c",
+        "paging.h": "c"
     },
     "git.enableCommitSigning": true
 }
