Fixed bug in reserving regions for low memory in pm.c Fixed bug where the heap manager was using kernel_end as base address without taking into account that virtual addresses after kernel_end were taken by bitmaps in pm.c.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -9,7 +9,8 @@
         "random": "c",
         "mp.h": "c",
         "vm.h": "c",
-        "paging.h": "c"
+        "paging.h": "c",
+        "pm.h": "c"
     },
     "git.enableCommitSigning": true
 }
