Added delays needed for ap startup code. What's left for smp boot now is the lapic driver code.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -10,7 +10,9 @@
         "mp.h": "c",
         "vm.h": "c",
         "paging.h": "c",
-        "pm.h": "c"
+        "pm.h": "c",
+        "idt.h": "c",
+        "gdt.h": "c"
     },
     "git.enableCommitSigning": true
 }
