Added messy code to test SMP booting with MP specification.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -12,7 +12,9 @@
         "paging.h": "c",
         "pm.h": "c",
         "idt.h": "c",
-        "gdt.h": "c"
+        "gdt.h": "c",
+        "cpu.h": "c",
+        "pit.h": "c"
     },
     "git.enableCommitSigning": true
 }
