Added hyperthreading smp support.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -14,7 +14,8 @@
         "idt.h": "c",
         "gdt.h": "c",
         "cpu.h": "c",
-        "pit.h": "c"
+        "pit.h": "c",
+        "lapic.h": "c"
     },
     "git.enableCommitSigning": true
 }
