More work to bring smp boot: -Added per cpu state TODO: - Implement virtual address allocator for kernel use. - Finish local apic and io apic drivers implementation and per cpu interrupts.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -17,7 +17,13 @@
         "pit.h": "c",
         "lapic.h": "c",
         "bootconsole.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "bootconsole_serial.h": "c",
+        "interrupt.h": "c",
+        "smp.h": "c",
+        "spinlock.h": "c",
+        "types.h": "c",
+        "assert.h": "c"
     },
     "git.enableCommitSigning": true
 }
