--- a/src/Makefile
+++ b/src/Makefile
@@ -41,18 +41,20 @@ else
 	OPTIMIZATION=-O3
 endif
 
-ifeq ($(ARCH), i686)
-	ARCH_BITS:=32
-endif
-
 ifeq ($(SMP), yes)
 	QEMU_SMP:=-smp 4,sockets=4
 else
 	QEMU_SMP:=
 endif
 
+ifeq ($(QEMU_CPU), "")
+	QEMU_CPU:=
+else
+	QEMU_CPU:=-cpu coreduo-v1
+endif
+
 CFLAGS:=$(OPTIMIZATION) $(DEBUG_INFO) -MMD -MP -I$(INCLUDE_DIR) -I$(INCLUDE_ARCH_DIR) -I$(INCLUDE_PLATFORM_DIR)
-CFLAGS+=-ffreestanding -Wall -Wextra -std=gnu11 -DARCH=$(ARCH) -DARCH_BITS=$(ARCH_BITS) -DEARLY_HEAP_SIZE=$(EARLY_HEAP_SIZE) -DKERNEL_HEAP_SIZE=$(KERNEL_HEAP_SIZE) -DSMP=$(SMP) $(DEBUG)
+CFLAGS+=-ffreestanding -Wall -Wextra -std=gnu11 -DEARLY_HEAP_SIZE=$(EARLY_HEAP_SIZE) -DKERNEL_HEAP_SIZE=$(KERNEL_HEAP_SIZE) -DSMP=$(SMP) $(DEBUG)
 LDFLAGS:=-T $(ARCH_DIR)/$(ARCH).ld -nostdlib
 
 LIBS:=-lgcc
@@ -124,19 +126,19 @@ $(ISO_DIR)/yauos.iso: $(BIN_DIR)/yauos
 
 ifeq ($(BOOTCONSOLE), vga)
 qemu: $(ISO_DIR)/yauos.iso
-	@qemu-system-$(ARCH) -monitor stdio -m $(QEMU_MEM) -cdrom $(ISO_DIR)/yauos.iso $(QEMU_SMP)
+	qemu-system-$(ARCH) -monitor stdio -m $(QEMU_MEM) -cdrom $(ISO_DIR)/yauos.iso $(QEMU_SMP) $(QEMU_CPU)
 else
 qemu: $(ISO_DIR)/yauos.iso
-	@qemu-system-$(ARCH) -serial mon:stdio -nographic -m $(QEMU_MEM) -cdrom $(ISO_DIR)/yauos.iso $(QEMU_SMP)
+	qemu-system-$(ARCH) -serial mon:stdio -nographic -m $(QEMU_MEM) -cdrom $(ISO_DIR)/yauos.iso $(QEMU_SMP) $(QEMU_CPU)
 endif
 
 ifeq ($(BOOTCONSOLE), vga)
 qemu-gdb: $(ISO_DIR)/yauos.iso
-	@qemu-system-$(ARCH) -monitor stdio -S -s -m $(QEMU_MEM) -cdrom $(ISO_DIR)/yauos.iso $(QEMU_SMP)
+	qemu-system-$(ARCH) -monitor stdio -S -s -m $(QEMU_MEM) -cdrom $(ISO_DIR)/yauos.iso $(QEMU_SMP) $(QEMU_CPU)
 else
 qemu-gdb: $(ISO_DIR)/yauos.iso
 	echo "Starting debugging session:"
-	@qemu-system-$(ARCH) -serial mon:stdio -nographic -S -s -m $(QEMU_MEM) -cdrom $(ISO_DIR)/yauos.iso $(QEMU_SMP)
+	qemu-system-$(ARCH) -serial mon:stdio -nographic -S -s -m $(QEMU_MEM) -cdrom $(ISO_DIR)/yauos.iso $(QEMU_SMP) $(QEMU_CPU)
 endif
 
 clean:
