Separated cpu exception and interrupt handling code.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -23,7 +23,8 @@
         "smp.h": "c",
         "spinlock.h": "c",
         "types.h": "c",
-        "assert.h": "c"
+        "assert.h": "c",
+        "cpuid.h": "c"
     },
     "git.enableCommitSigning": true
 }
