Added register dump on kernel exceptions. Changed interrupt frame structure.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -24,7 +24,8 @@
         "spinlock.h": "c",
         "types.h": "c",
         "assert.h": "c",
-        "cpuid.h": "c"
+        "cpuid.h": "c",
+        "exception_interrupt.h": "c"
     },
     "git.enableCommitSigning": true
 }
