- Set default tabulation and indentation size to 8 spaces. - Properly indented all code to the new format. - Added oss code settings for indendation and tabulation sizes.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,31 +1,35 @@
 {
-    "files.associations": {
-        "stdint-gcc.h": "c",
-        "stdint.h": "c",
-        "bitmap.h": "c",
-        "bootinfo.h": "c",
-        "kmalloc.h": "c",
-        "printk.h": "c",
-        "random": "c",
-        "mp.h": "c",
-        "vm.h": "c",
-        "paging.h": "c",
-        "pm.h": "c",
-        "idt.h": "c",
-        "gdt.h": "c",
-        "cpu.h": "c",
-        "pit.h": "c",
-        "lapic.h": "c",
-        "bootconsole.h": "c",
-        "string.h": "c",
-        "bootconsole_serial.h": "c",
-        "interrupt.h": "c",
-        "smp.h": "c",
-        "spinlock.h": "c",
-        "types.h": "c",
-        "assert.h": "c",
-        "cpuid.h": "c",
-        "exception_interrupt.h": "c"
-    },
-    "git.enableCommitSigning": true
+        "files.associations": {
+                "stdint-gcc.h": "c",
+                "stdint.h": "c",
+                "bitmap.h": "c",
+                "bootinfo.h": "c",
+                "kmalloc.h": "c",
+                "printk.h": "c",
+                "random": "c",
+                "mp.h": "c",
+                "vm.h": "c",
+                "paging.h": "c",
+                "pm.h": "c",
+                "idt.h": "c",
+                "gdt.h": "c",
+                "cpu.h": "c",
+                "pit.h": "c",
+                "lapic.h": "c",
+                "bootconsole.h": "c",
+                "string.h": "c",
+                "bootconsole_serial.h": "c",
+                "interrupt.h": "c",
+                "smp.h": "c",
+                "spinlock.h": "c",
+                "types.h": "c",
+                "assert.h": "c",
+                "cpuid.h": "c",
+                "exception_interrupt.h": "c",
+                "io.h": "c"
+        },
+        "git.enableCommitSigning": true,
+        "editor.tabSize": 8,
+        "C_Cpp.clang_format_style": "file",
+        "editor.detectIndentation": false
 }
