--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -1,20 +1,24 @@
 {
-    "version": "0.2.0",
-    "configurations": [      
-        {
-          "name": "Debug YauOs",
-          "type": "cppdbg",
-          "request": "launch",
-          "program": "${workspaceFolder}/../bin/yauos",
-          "cwd": "${workspaceFolder}",
-          "externalConsole": false,
-          "launchCompleteCommand": "exec-run",
-          "MIMode": "gdb",
-          "setupCommands": [
-            {"text": "file ${workspaceFolder}/../bin/yauos"},
-            {"text": "target remote localhost:1234"},
-          ],
-          "preLaunchTask": "Run Debug"
-        }
-    ]
-}    
+        "version": "0.2.0",
+        "configurations": [
+                {
+                        "name": "Debug YauOs",
+                        "type": "cppdbg",
+                        "request": "launch",
+                        "program": "${workspaceFolder}/../bin/yauos",
+                        "cwd": "${workspaceFolder}",
+                        "externalConsole": false,
+                        "launchCompleteCommand": "exec-run",
+                        "MIMode": "gdb",
+                        "setupCommands": [ 
+                                {
+                                        "text": "file ${workspaceFolder}/../bin/yauos"
+                                },
+                                {
+                                        "text": "target remote localhost:1234"
+                                },
+                        ],
+                        "preLaunchTask": "Run Debug"
+                }
+        ]
+}
