--- a/src/.vscode/tasks.json
+++ b/src/.vscode/tasks.json
@@ -1,74 +1,73 @@
 {
-    "version": "2.0.0",
-    "tasks":
-    [
-        {
-            "label": "Build",
-            "type": "shell",
-            "command": "make",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
-        },
-        {
-            "label": "Build Debug",
-            "type": "shell",
-            "command": "make",
-            "args": [
-                "DEBUG_ENABLE=1"
-            ]
-        },
-        {
-            "label": "Run",
-            "dependsOn": [
-                "Build"
-            ],
-            "type": "shell",
-            "command": "make",
-            "group": {
-                "kind": "test",
-                "isDefault": true
-            },
-            "args": [
-                "qemu"
-            ],
-            "problemMatcher": []
-        },
-        {
-            "label": "Run Debug",
-            "dependsOn": [
-                "Build Debug"
-            ],
-            "type": "shell",
-            "isBackground": true,
-            "command": "make",
-            "args": [
-                "qemu-gdb"
-            ],
-            "problemMatcher": {
-                "pattern": [
-                    {
-                        "regexp": ".",
-                        "file": 1,
-                        "location": 2,
-                        "message": 3
-                    }
-                ],
-                "background": {
-                    "activeOnStart": true,
-                    "beginsPattern": "^Starting debugging session:",
-                    "endsPattern": "."
+        "version": "2.0.0",
+        "tasks": [
+                {
+                        "label": "Build",
+                        "type": "shell",
+                        "command": "make",
+                        "group": {
+                                "kind": "build",
+                                "isDefault": true
+                        }
+                },
+                {
+                        "label": "Build Debug",
+                        "type": "shell",
+                        "command": "make",
+                        "args": [
+                                "DEBUG_ENABLE=1"
+                        ]
+                },
+                {
+                        "label": "Run",
+                        "dependsOn": [
+                                "Build"
+                        ],
+                        "type": "shell",
+                        "command": "make",
+                        "group": {
+                                "kind": "test",
+                                "isDefault": true
+                        },
+                        "args": [
+                                "qemu"
+                        ],
+                        "problemMatcher": []
+                },
+                {
+                        "label": "Run Debug",
+                        "dependsOn": [
+                                "Build Debug"
+                        ],
+                        "type": "shell",
+                        "isBackground": true,
+                        "command": "make",
+                        "args": [
+                                "qemu-gdb"
+                        ],
+                        "problemMatcher": {
+                                "pattern": [
+                                        {
+                                                "regexp": ".",
+                                                "file": 1,
+                                                "location": 2,
+                                                "message": 3
+                                        }
+                                ],
+                                "background": {
+                                        "activeOnStart": true,
+                                        "beginsPattern": "^Starting debugging session:",
+                                        "endsPattern": "."
+                                }
+                        }
+                },
+                {
+                        "label": "Clean",
+                        "type": "shell",
+                        "command": "make",
+                        "args": [
+                                "clean"
+                        ]
                 }
-            }
-        },
-        {
-            "label": "Clean",
-            "type": "shell",
-            "command": "make",
-            "args": [
-                "clean"
-            ]
-        }
-    ]
+        ]
 }
